--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,8 +116,8 @@ i {
     width: 62%;
   }
 }
-.reservation button::hover {
-  transform: scale(1.03);
+.reservation button:hover {
+  transform: scale(1.01);
   opacity: 0.9;
 }
 
