--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import "libs/mixins.scss";
 @import "libs/variables.scss";
 
@@ -282,7 +282,6 @@ i {
     color: transparent;
     background-image: $radiant;
     background-clip: text;
-    webkit-background-clip: text;
     opacity: 0;
     transition: all 50ms;
   }
