--- a/CSS/style.css
+++ b/CSS/style.css
@@ -442,6 +442,7 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 16px;
   padding: 0.1rem;
   text-decoration: none;
 }
