--- a/SCSS/libs/mixins.scss
+++ b/SCSS/libs/mixins.scss
@@ -51,6 +51,17 @@ position: relative;
     color: $bcolor;
 }
 
+@mixin footer_element {
+    color: $wcolor;
+    margin-left: $p16;
+    @include display;
+    gap: 16px;
+    padding: 0.1rem;
+    text-decoration:none;
+}
+
+    
+
 @mixin sm {
     @media ( max-width: map-get ($breakpoints, "sm")) {
         @content;
